Update Kari Games Scheduler_V2.html

--- a/Kari Games Scheduler_V2.html
+++ b/Kari Games Scheduler_V2.html
@@ -802,7 +802,7 @@ return;
 
 }
 
-    if (allRounds.length = 0) {
+    if (allRounds.length === 0) {
 
         initScheduler(players.map(p => p.name), numCourts, fixedPairs);
 
@@ -923,5 +923,6 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
