Update Kari Games Scheduler_V2.html

--- a/Kari Games Scheduler_V2.html
+++ b/Kari Games Scheduler_V2.html
@@ -856,7 +856,7 @@ return;
 
             }           
 
-            allRounds = [AischedulerNextRound()];
+            allRounds.push(AischedulerNextRound());
 
             currentRoundIndex = currentRoundIndex + 1;
 
@@ -923,6 +923,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
