--- a/V3.html
+++ b/V3.html
@@ -8,6 +8,16 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Badminton Championship</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     /* Reset and base styles */
     * {
@@ -139,6 +149,71 @@
       }
     }
   </style>
+</head>
+<body>
+  <h1>🏸 Badminton Championship</h1>
+
+  <div class="card">
+    <!-- Example Input Section (Keep your same IDs & JS functions) -->
+    <label for="players">Players (comma separated):</label>
+    <textarea id="players" rows="3" placeholder="Enter player names..."></textarea>
+
+    <label for="courts">Number of Courts:</label>
+    <input type="number" id="courts" min="1" placeholder="Enter court count" />
+
+    <label for="rounds">Number of Rounds:</label>
+    <input type="number" id="rounds" min="1" placeholder="Enter rounds" />
+
+    <button onclick="generateSchedule()">Generate Schedule</button>
+  </div>
+
+  <div class="results" id="results"></div>
+
+  <!-- Your Original JavaScript (unchanged) -->
+  <script>
+    function generateSchedule() {
+      const playersInput = document.getElementById("players").value.trim();
+      const courts = parseInt(document.getElementById("courts").value);
+      const rounds = parseInt(document.getElementById("rounds").value);
+      const resultsDiv = document.getElementById("results");
+
+      if (!playersInput || !courts || !rounds) {
+        resultsDiv.innerHTML = "<p>Please fill all fields.</p>";
+        return;
+      }
+
+      const players = playersInput.split(",").map(p => p.trim()).filter(Boolean);
+      const totalPlayers = players.length;
+      const gamesPerRound = courts * 4;
+
+      let allRounds = [];
+
+      for (let r = 1; r <= rounds; r++) {
+        let roundPlayers = [...players];
+        let roundGames = [];
+
+        while (roundPlayers.length >= 4) {
+          const gamePlayers = roundPlayers.splice(0, 4);
+          roundGames.push(gamePlayers);
+        }
+
+        allRounds.push(roundGames);
+      }
+
+      let html = "";
+      allRounds.forEach((round, i) => {
+        html += `<h3>Round ${i + 1}</h3><table><tr><th>Court</th><th>Players</th></tr>`;
+        round.forEach((game, j) => {
+          html += `<tr><td>${j + 1}</td><td>${game.join(", ")}</td></tr>`;
+        });
+        html += `</table>`;
+      });
+
+      resultsDiv.innerHTML = html;
+    }
+  </script>
+</body>
+</html>
 </head>
 <body>
   <h1>🏸 Badminton Championship</h1>
