--- a/Kari Games Scheduler_V3.html
+++ b/Kari Games Scheduler_V3.html
@@ -636,6 +636,142 @@ function AischedulerNextRound() {
     }
   }
 
+  // Prevent over-resting
+  while (players.length - resting.length < numPlayersPerRound && resting.length > 0) {
+    const maxRest = resting.reduce(
+      (maxP, p) => (restCount.get(p) > restCount.get(maxP) ? p : maxP),
+      resting[0]
+    );
+    resting = resting.filter(p => p !== maxRest);
+  }
+
+  // Players participating in this round
+  const playing = players.filter(p => !resting.includes(p)).slice(0, numPlayersPerRound);
+  const restingWithNumber = resting.map(p => {
+    restCount.set(p, (restCount.get(p) || 0) + 1);
+    return `${p}#${restCount.get(p)}`;
+  });
+
+  // === 2️⃣ Build pairs (prefer unplayed ones) ===
+  const pairs = [];
+  const used = new Set();
+
+  // Fixed pairs first
+  for (const [p1, p2] of fixedPairs) {
+    if (playing.includes(p1) && playing.includes(p2)) {
+      pairs.push([p1, p2]);
+      used.add(p1);
+      used.add(p2);
+      playedTogether.set([p1, p2].sort().join("&"), schedulerState.roundIndex);
+    }
+  }
+
+  // Remaining free players
+  let free = playing.filter(p => !used.has(p)).sort(() => Math.random() - 0.5);
+  if (free.length % 2 !== 0) free.pop(); // ensure even number
+
+  const pairScores = [];
+  for (let i = 0; i < free.length - 1; i++) {
+    for (let j = i + 1; j < free.length; j++) {
+      const key = [free[i], free[j]].sort().join("&");
+      const lastPlayed = playedTogether.get(key);
+      const score = lastPlayed ? schedulerState.roundIndex - lastPlayed : Infinity; // Infinity = never played
+      pairScores.push({ key, p1: free[i], p2: free[j], score });
+    }
+  }
+
+  // Sort by freshness (newer = higher priority)
+  pairScores.sort((a, b) => {
+    if (a.score === Infinity && b.score !== Infinity) return -1;
+    if (b.score === Infinity && a.score !== Infinity) return 1;
+    return b.score - a.score;
+  });
+
+  // Select pairs without overlap
+  for (const { key, p1, p2 } of pairScores) {
+    if (!used.has(p1) && !used.has(p2)) {
+      pairs.push([p1, p2]);
+      used.add(p1);
+      used.add(p2);
+      playedTogether.set(key, schedulerState.roundIndex);
+    }
+  }
+
+  // === 3️⃣ Form games — prioritize new matchups ===
+  const games = [];
+  const playedAgainstSnapshot = new Set(playedAgainst);
+
+  for (let i = 0; i < pairs.length - 1; i++) {
+    for (let j = i + 1; j < pairs.length; j++) {
+      const matchupKey = [...pairs[i], ...pairs[j]].map(p => p.toLowerCase()).sort().join("&");
+      const bothNew = !playedAgainstSnapshot.has(matchupKey);
+      games.push({ pair1: pairs[i], pair2: pairs[j], matchupKey, bothNew });
+    }
+  }
+
+  // Rank games: prefer new matchups and unplayed pairs
+  games.sort((a, b) => {
+    const aScore =
+      (a.bothNew ? 3 : 0) +
+      ((!playedTogether.has(a.pair1.join("&")) || !playedTogether.has(a.pair2.join("&"))) ? 1 : 0);
+    const bScore =
+      (b.bothNew ? 3 : 0) +
+      ((!playedTogether.has(b.pair1.join("&")) || !playedTogether.has(b.pair2.join("&"))) ? 1 : 0);
+    return bScore - aScore;
+  });
+
+  // === 4️⃣ Select final games (up to numCourts) ===
+  const usedPairs = new Set();
+  const finalGames = [];
+  for (const g of games) {
+    if (finalGames.length >= numCourts) break;
+    if ([...g.pair1, ...g.pair2].some(p => usedPairs.has(p))) continue;
+    finalGames.push({
+      court: finalGames.length + 1,
+      pair1: g.pair1,
+      pair2: g.pair2
+    });
+    [...g.pair1, ...g.pair2].forEach(p => usedPairs.add(p));
+    playedAgainst.add(g.matchupKey);
+  }
+
+  // === 5️⃣ Fallback if too repetitive ===
+  if (finalGames.length < numCourts) {
+    console.warn("⚠️ Not enough new games found — resetting history...");
+    schedulerState.playedTogether = new Map();
+    schedulerState.playedAgainst = new Set();
+  }
+
+  // === 6️⃣ Return finalized round ===
+  return {
+    round: schedulerState.roundIndex,
+    resting: restingWithNumber,
+    playing,
+    games: finalGames
+  };
+}
+
+  
+function AischedulerNextRoundold() {
+  const { players, numCourts, fixedPairs, restCount, playedTogether, playedAgainst, fixedMap } = schedulerState;
+  const totalPlayers = players.length;
+  const numPlayersPerRound = numCourts * 4;
+  const numResting = Math.max(totalPlayers - numPlayersPerRound, 0);
+  schedulerState.roundIndex++;
+
+  // === 1️⃣ Pick resting players (fairly) ===
+  let resting = [...players]
+    .sort((a, b) => (restCount.get(a) || 0) - (restCount.get(b) || 0))
+    .slice(0, numResting);
+
+  // Ensure fixed pairs rest together
+  for (const p of [...resting]) {
+    if (fixedMap.has(p)) {
+      const partner = fixedMap.get(p);
+      if (!resting.includes(partner)) resting.push(partner);
+    }
+  }
+
   // Ensure enough players remain
   while (players.length - resting.length < numPlayersPerRound) {
     const maxRest = resting.reduce(
@@ -990,6 +1126,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
